--- a/aboutus.html
+++ b/aboutus.html
@@ -32,7 +32,6 @@
 
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
         <div class="container">
-            <a class="navbar-brand" href="index.html"><img src="img/logo.png" height="30" width="30"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nucampNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -40,7 +39,7 @@
                 <ul class="navbar-nav">
                     <li class="nav-items"><a href="index.html" class="nav-link"><i class="fa fa-home fa-lg"></i> Home</a></li>
                     <li class="nav-items active"><a href="#" class="nav-link"><i class="fa fa-info fa-lg"></i> About</a></li>
-                    <li class="nav-items"><a href="#" class="nav-link"><i class="fa fa-list fa-lg"></i> Sites</a></li>
+                    <li class="nav-items"><a href="" role="button" class="nav-link" data-toggle="tooltip" data-placement="bottom" data-html="true" title="Under Construction"><i class="fa fa-list fa-lg"></i> Sites</a></li>
                     <li class="nav-items"><a href="contactus.html" class="nav-link"><i class="fa fa-address-card fa-lg"></i> Contact</a></li>
                 </ul>
             </div>
@@ -62,7 +61,7 @@
         <div class="row row-content">
             <div class="col-sm-6">
                 <h3>Our Mission</h3>
-                <p>We present a curated database of the best campsites in the vast woods and backcountry of the World Wide Web Wilderness. We increase access to adventure for the public while promoting safe and respectful use of resources. The expert wilderness trekkers on our staff personally verify each campsite to make sure that they are up to our standards. We also present a platform for campers to share reviews on campsites they have visited with each other.</p>
+                <p class="ourMission">We present a curated database of the best campsites in the vast woods and backcountry of the World Wide Web Wilderness. We increase access to adventure for the public while promoting safe and respectful use of resources. The expert wilderness trekkers on our staff personally verify each campsite to make sure that they are up to our standards. We also present a platform for campers to share reviews on campsites they have visited with each other.</p>
             </div>
             <div class="col-sm-6">
                 <div class="card">
@@ -155,7 +154,7 @@
         </div>
 
         <div class="row row-content">
-            <div class="col-sm-9">
+            <div class="col-sm">
                 <h2>Factes &amp; Figures </h2>
                 <div class="table-responsive">
                     <table class="table table-striped">
@@ -223,7 +222,11 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script> 
-
+    <script>
+        $(function () {
+            $('[data-toggle="tooltip"]').tooltip()  
+        })
+    </script>
 </body>
 
 </html>
