--- a/contactus.html
+++ b/contactus.html
@@ -2,16 +2,13 @@
 <html lang="en">
 
 <head>
-    <!-- Required meta tags always come first -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
 
-    <!-- Additional CSS must be placed after Bootstrap CSS -->
-    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
+    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
     <link rel="stylesheet" href="css/styles.css" />
 
@@ -36,16 +33,16 @@
 
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
         <div class="container">
-            <a class="navbar-brand" href="index.html"><img src="img/logo.png" height="30" width="30"></a>
+            
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nucampNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="nucampNavbar">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="index.html"><i class="fa fa-home fa-lg"></i> Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="aboutus.html"><i class="fa fa-info fa-lg"></i> About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-list fa-lg"></i> Sites</a></li>
-                    <li class="nav-item active"><a class="nav-link" href="contactus.html"><i class="fa fa-address-card fa-lg"></i> Contact</a></li>
+                    <li class="nav-items"><a href="index.html" class="nav-link"><i class="fa fa-home fa-lg"></i> Home</a></li>
+                    <li class="nav-items"><a href="aboutus.html" class="nav-link"><i class="fa fa-info fa-lg"></i> About</a></li>
+                    <li class="nav-items"><a href="" role="button" class="nav-link" data-toggle="tooltip" data-placement="bottom" data-html="true" title="Under Construction"><i class="fa fa-list fa-lg"></i> Sites</a></li>
+                    <li class="nav-items active"><a href="#" class="nav-link"><i class="fa fa-address-card fa-lg"></i> Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -83,7 +80,7 @@
                 <h2>Send us your Feedback</h2>
                 <hr />
             </div>
-            <div class="col-md-10">
+            <div class="col-md">
                 <form>
                     <div class="form-group row">
                         <label for="firstName" class="col-md-2 col-form-label">First Name</label>
@@ -171,7 +168,11 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-
+    <script>
+        $(function () {
+            $('[data-toggle="tooltip"]').tooltip()  
+        })
+    </script>
 </body>
 
 </html>
