--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <h2>a better way to camp</h2>
                 </div>
                 <div class="col-md-4 col-xl-2 mt-4">
-                    <a href="#reserveForm" role="button" class="btn btn-google btn-lg text-nowrap" data-toggle="tooltip" data-placement="bottom" data-html="true" title="Or call us at <br /> <strong>1-206-555-1234</strong>">Reserve Campsite</a>
+                    <a href="#reserveForm" role="button" class="btn btn-info btn-lg text-nowrap" data-toggle="tooltip" data-placement="bottom" data-html="true" title="Or call us at <br /> <strong>1-206-555-1234</strong>">Reserve Campsite</a>
                 </div>
             </div> 
         </div>
@@ -36,7 +36,6 @@
 
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
         <div class="container">
-            
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nucampNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -44,7 +43,7 @@
                 <ul class="navbar-nav">
                     <li class="nav-items active"><a href="#" class="nav-link"><i class="fa fa-home fa-lg"></i> Home</a></li>
                     <li class="nav-items"><a href="aboutus.html" class="nav-link"><i class="fa fa-info fa-lg"></i> About</a></li>
-                    <li class="nav-items"><a href="#" class="nav-link"><i class="fa fa-list fa-lg"></i> Sites</a></li>
+                    <li class="nav-items"><a href="" role="button" class="nav-link" data-toggle="tooltip" data-placement="bottom" data-html="true" title="Under Construction"><i class="fa fa-list fa-lg"></i> Sites</a></li>
                     <li class="nav-items"><a href="contactus.html" class="nav-link"><i class="fa fa-address-card fa-lg"></i> Contact</a></li>
                 </ul>
                 <span class="navbar-text ml-auto">
@@ -96,7 +95,7 @@
     <div class="container">
 
         <div class="row row-content">
-            <div class="col-md-8 mx-auto">
+            <div class="col col-lg-8 mx-auto">
                 <div id="homeCarousel" class="carousel slide" data-ride="carousel">
                     <ol class="carousel-indicators">
                         <li data-target="#hoomeCarousel" data-slide-to="0" class="active"></li>
@@ -186,7 +185,7 @@
         </div>
         
         <div class="row row-content">
-            <div class="col-sm-6 mx-auto">
+            <div class="col col-md-8 mx-auto">
                 <div class="card">
                     <h3 class="card-header bg-info text-white">Reserve a Campsite</h3>
                     <div class="card-body">
