--- a/aboutus.html
+++ b/aboutus.html
@@ -26,6 +26,9 @@
                     <h1>NuCamp</h1>
                     <h2>a better way to camp</h2>
                 </div>
+                <div class="col-md-4 col-xl-2 mt-4">
+                    <a href="#reserveForm" role="button" class="btn btn-info btn-lg text-nowrap" data-toggle="tooltip" data-placement="bottom" data-html="true" title="Or call us at <br /> <strong>1-206-555-1234</strong>">Reserve Campsite</a>
+                </div>
             </div> 
         </div>
     </header>
