--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <h1>NuCamp</h1>
                     <h2>a better way to camp</h2>
                 </div>
-                <div class="col-md-4 col-xl-2 mt-4">
+                <div class="col col-xl-2 mt-4">
                     <a href="#reserveForm" role="button" class="btn btn-info btn-lg text-nowrap" data-toggle="tooltip" data-placement="bottom" data-html="true" title="Or call us at <br /> <strong>1-206-555-1234</strong>">Reserve Campsite</a>
                 </div>
             </div> 
@@ -95,7 +95,7 @@
     <div class="container">
 
         <div class="row row-content">
-            <div class="col col-lg-8 mx-auto">
+            <div class="col-xl-10 mx-auto">
                 <div id="homeCarousel" class="carousel slide" data-ride="carousel">
                     <ol class="carousel-indicators">
                         <li data-target="#hoomeCarousel" data-slide-to="0" class="active"></li>
@@ -107,21 +107,21 @@
                             <img class="d-block w-100" src="img/breadcrumb-trail.jpg" alt="Breadcrumb Trail Campground" />
                             <div class="carousel-caption">
                                 <h3>Breadcrumb Trail Campground</h3>
-                                <p class="d-none d-sm-block">Let Nucamp be your guide to this off-the-beaten-path, hike-in-only campground</p>
+                                <p class="d-none d-sm-block pl-2 pr-2">Let Nucamp be your guide to this off-the-beaten-path, hike-in-only campground</p>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <img class="d-block w-100" src="img/react-lake.jpg" alt="React Lake Campground" />
                             <div class="carousel-caption">
                                 <h3>React Lake Capground</h3>
-                                <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine REact Lake is a favorite for fly fishers.</p>
+                                <p class="d-none d-sm-block pl-2 pr-2">Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine REact Lake is a favorite for fly fishers.</p>
                             </div>                        
                         </div>
                         <div class="carousel-item">
                             <img class="d-block w-100" src="img/chrome-river.jpg" alt="Chrome River Campground" />
                             <div class="carousel-caption">
                                 <h3>Chrome River Campground</h3>
-                                <p class="d-none d-sm-block">Spend a few sunny days and starry nights beneath a canopy of old-grown first at this enchanting spot by the Chrome River.</p>
+                                <p class="d-none d-sm-block pl-2 pr-2">Spend a few sunny days and starry nights beneath a canopy of old-grown first at this enchanting spot by the Chrome River.</p>
                             </div> 
                         </div>
                     </div>
@@ -209,10 +209,11 @@
                                 <div class="col col-sm-6">
                                     <input class="form-control" type="date" id="date" name="date" placeholder="date">
                                 </div>
-                                </div>
                             </div>
-                            <div class="col form-group">
-                                <button type="submit" class="btn btn-primary">Search</button>
+                            <div class="form-group row">
+                                <div class="col">
+                                    <button type="submit" class="btn btn-primary">Search</button>
+                                </div>
                             </div>
                         </form>
                     </div>
